chunk-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: chunk-worker
  name: chunk-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chunk-worker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/back-office: "true"
        io.kompose.service: chunk-worker
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - env:
            - name: AWS_ACCESS_KEY
              value: ${AWS_ACCESS_KEY}
            - name: AWS_SECRET_ACCESS_KEY
              value: ${AWS_SECRET_ACCESS_KEY}
            - name: BUCKET_NAME
              value: ${BUCKET_NAME}
            - name: REDIS_QUEUE
              value: redis
          image: ghcr.io/suphahero-coderz/toktik-chunk-worker:latest
          name: chunk-worker
          resources: {}
      restartPolicy: Always
status: {}
