ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toktik
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  frontend
                port:
                  number: 3000
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name:  backend  
                port:
                  number: 80
