back-office-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: back-office
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/back-office: "true"
  podSelector:
    matchLabels:
      io.kompose.network/back-office: "true"
