user-facing-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: user-facing
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/user-facing: "true"
  podSelector:
    matchLabels:
      io.kompose.network/user-facing: "true"
